--- a/02_정당과 역사.md
+++ b/02_정당과 역사.md
@@ -55,7 +55,7 @@
 
 ### 노동당 - 선명 사민주의 정당
 노동당 역시 2000년대부터 합종연횡의 역사가 복잡하지만, 현재로서는 과거 민주노동당 참가 세력 중 '투쟁현장'에 가장 적극적으로 참여하는 성향이 남아있다고 볼 수 있다. 이러한 성향은 수도권의 철거현장에 대한 연대활동, 제조업 공장이 많은 경남권에서 노동운동과의 결합 등, 노동당의 여러가지 활동을 통해 확인할 수 있다. 제도정치 바깥의 운동과 결합이 많음에 따라 더 급진적인 주장을 하게 되어, 노동당 당원들은 비슷한 성향의 정의당 당원들에 비해서도 노동운동, 빈민 문제 등에 있어서 더 선명한 주장을 내놓곤 한다. 
-그러나 이것이 제도정치로 연결되지 않는 상황에서, 일반 유권자의 관점에서는 당세가 점점 줄어든다는 느낌을 받을 것이다. 실제로 2010년대 3~4차례의 집단탈당 상황을 거치면서, 노동당 안에서 제도정치에 참여하거나 (기본소득과 같은) 대중적 정책방향성을 제시하려고 시도한 정파 상당수가 다른 정당으로 집단입당하거나 별도로 창당하는 형태로 대부분 빠져나가고, 이에 따라 공직선거에서의 활동만을 놓고 보면 후보 숫자가 점점 줄어드는 등 동력이 떨어지고 있다. 
+그러나 이것이 제도정치로 연결되지 않는 상황에서, 일반 유권자의 관점에서는 당세가 점점 줄어든다는 느낌을 받을 것이다. 실제로 2010년대 3~~4차례의 집단탈당 상황을 거치면서, 노동당 안에서 제도정치에 참여하거나 (기본소득과 같은) 대중적 정책방향성을 제시하려고 시도한 정파 상당수가 다른 정당으로 집단입당하거나 별도로 창당하는 형태로 대부분 빠져나가고, 이에 따라 공직선거에서의 활동만을 놓고 보면 후보 숫자가 점점 줄어드는 등 동력이 떨어지고 있다. 
 
 
 ## 극우정당 및 종교정당
