--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -56,7 +56,7 @@
 ### 법제사법위원회(법사위)
 법제사법위원회는 행정부의 법무부, 검찰청, 법제처 및 그 산하기관, 그리고 사법부인 법원과 관련된 사안을 다루는 위원회다. 
 ### 사법개혁특별위원회(사개특위)
-2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 재판거래를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서('고위공직자수사처', 약칭 '공수처')를 설치하여 검찰 견제구조를 만드는 것. 
+2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~~17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 재판거래를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서('고위공직자수사처', 약칭 '공수처')를 설치하여 검찰 견제구조를 만드는 것. 
 
 #### 서울 은평구 갑: 박주민
 
@@ -104,11 +104,11 @@
 
 
 #### 자, 예산안 게임을 시작하지
-국회에서는 매년 11~12월마다 예산안 통과를 놓고 정당 차원의 줄다리기를 한다. 집권당은 1월이 넘어가기 전에 예산안을 반드시 통과시키려고 하고, 다른 당들은 이를 협상카드로 삼아서 자신들이 요구하는 특정 법안을 통과시키거나 특정 정책 예산을 증액/삭감하도록 요구하기 때문이다. 과거 국회에서는 예산안 협상에서 파워를 발휘할 정도로 규모가 큰 정당이 2개(민주당계 정당과 보수주류 정당) 뿐이었으므로 이 협상과 갈등이 매우 길어졌다. 
-그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 <u>예산이 그나마 빠르게 통과되는(2016-20 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)</u> 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
+국회에서는 매년 11~~12월마다 예산안 통과를 놓고 정당 차원의 줄다리기를 한다. 집권당은 1월이 넘어가기 전에 예산안을 반드시 통과시키려고 하고, 다른 당들은 이를 협상카드로 삼아서 자신들이 요구하는 특정 법안을 통과시키거나 특정 정책 예산을 증액/삭감하도록 요구하기 때문이다. 과거 국회에서는 예산안 협상에서 파워를 발휘할 정도로 규모가 큰 정당이 2개(민주당계 정당과 보수주류 정당) 뿐이었으므로 이 협상과 갈등이 매우 길어졌다. 
+그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~~40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 <u>예산이 그나마 빠르게 통과되는(2016-20 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)</u> 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
 
 #### 내 난방비! 내 마스크!
-앞서 말했듯 중앙정부의 1년 예산은 500조 원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~ 1월 초에 
+앞서 말했듯 중앙정부의 1년 예산은 500조 원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~~ 1월 초에 
 
 #### 증세냐 감세냐
 사실 
@@ -120,12 +120,12 @@
 #### 서울 양천구 갑: 김용태
 
 #### 서울 관악구 갑, 대구 동구 을: 김성식, 유승민
-김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 <u>한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)</u>정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 <u>유수호(유수호는 1988~96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)</u>가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
+김성식과 유승민은 모두 국회에서 거물 중진이면서 경제 관련 정책통으로 알려졌다. 김성식은 1980년대 <u>한국노총(한국노동조합총연맹. 1987년 민주화 이전까지 한국 정부가 인정한 유일한 노동조합 연맹조직이다. 군사정권의 암묵적 인가를 받아 활동한 역사로 인해 정부와 기업에 지나치게 유화적이라는 비판을 받아서, 1990년 현재의 민주노총이 탄생하는 계기가 되었다. 한국노총은 계속해서 한국 최대규모의 노조연맹체였으나, 2018년 처음으로 조합원수에서 민주노총에게 추월당했다.)</u>정책기획실장과 진보적 민간 사회정책연구소로 알려진 한국사회과학연구소 연구원 출신이고, 유승민은 국책연구기관인 한국개발연구원에서 약 20년간 재직했다. 2016-2020 국회에서는 두 의원 모두 4년 동안 기재위에 소속되어, 우파적 관점을 담았지만 개혁적이며 전문적으로 핵심을 짚는 것만은 분명한, 그런 질의들을 많이 남긴다. 두 의원은 모두 2000년대에 한나라당(보수주류 정당)에서 소장파 역할을 하고, 공천에서 배제당하거나 당 쇄신을 요구하며 자의 반 타의 반으로 보수주류 정당의 핵심에서 밀려났다. 2010년대 들어 둘 다 바른미래당에 함께 몸담았으나, 그 이후의 정치계보가 갈라져버렸다. 학생운동과 노동조합 경력을 가진 김성식은 안철수와 함께 (민주당계 정당이라고 볼 수도 있는) 국민의당을 창당했기에, 이제는 민주당계 정당 내의 중도보수 계통에 속했다고도 볼 수 있다. 그러나 아버지 <u>유수호(유수호는 1988~~96년에 대구 중구에서 국회의원으로 당선되었고, 민주정의당-민주자유당과 자유민주연합에 소속되었다.)</u>가 보수주류 정당 소속이었고 본인도 연구자 생활을 계속 했던 유승민은, 당을 새로 만들지언정 그래도 우파정당 계통 안에서 정책적 목소리를 내고 있다. 
 
 #### 경기 고양시 갑: 심상정
 
 #### 대구 수성구 을: 김부겸
-김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
+김부겸은 2016-2020 국회에서 행안위와 가장 많이 접촉한 의원이다. 김부겸이 이번 국회 행안위에 소속된 적은 없지만, 그는 문재인 행정부의 초대 행정안전부 장관(2017~~19)이었다. 행안부 장관으로서는 지방자치가 시행된 이후(1995) 역대 3번째로 재임기간이 길고, 공화국의 탄생 이래(1948) 대통령이 취임 직후 임명한 행안부 장관 중에서는 재임기간이 가장 길다. 정권의 힘이 가장 강한 초기에 이만큼 오래 재임했다는 것은, 역대 장관 중에서 중앙정부 및 지방자치에 대한 틀을 만드는 데 가장 깊게 관여했다는 뜻이기도 하다. 김부겸이 가진 무게감(4선 국회의원이자, 민주당계 정당 최초의 대구 지역구 의원)까지 결합되어 독자적인 영향력도 강했을 것이다. 그의 당선 여부는 향후 국회와 정계에도 영향을 발휘해서, 김부겸이 설계한 지방분권 체제가 얼마나 잘 유지될 것인지를 결정할 것이다. 
 
 #### 경남 사천시-남해군-하동군: 제윤경
 
