--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -5,7 +5,7 @@
 하지만 세부적으로 보면 조금 다르다. 서울을 세부적으로 살펴보면 각 당의 텃밭이라고 불릴 지역이 많았다. 민주당계 정당이 <u>동북4구(성북구, 강북구, 도봉구, 노원구)</u>의 약 9석을, 보수주류 정당이 <u>강남4구(서초구, 강남구, 송파구, 강동구)</u>의 약 9석을 안정적인 텃밭으로 가진 뒤, 나머지 지역에서는 지역구 후보의 무게감에 따라 그때그때 결과가 달리 나오는 경우가 많았다. 2000년 총선까지 서울의 지역구 당선 결과를 보면 보통 민주당계 정당과 보수주류 정당이 3:2 또는 2:3의 비율로 두 당이 큰 쏠림 없이 나눠가지곤 했다. 
 쏠림 현상이 적었던 이유는, 서울 지역의 특성상 중앙정계에 영향력이 큰 중진이 곳곳에 배치되었기 때문이다. 서울을 지역구로 두면 국회나 중앙언론사로 접근하기 좋기 때문에 의정활동, 지역구활동, 언론대응을 두루 잘 할 수 있다. 따라서 전국적으로 주목받는 정치인으로 성장해서, 당에 상관없이 지역구에서 많은 인기를 얻기 쉬웠다. 또 한편으로는 전라권/경상권 지역구의 다선 국회의원이 중앙당의 부름을 받고 격전지인 서울에서 출마하는 경우도 많았다.
 
-이 추세에 균열을 낸 요소가 2000년대에 등장한다. 하나는 (당시 기준으로) 기존 원내정당과 전혀 다른 이념정책을 내세운 사민주의 정당의 등장이고, 또 하나는 '정당'의 존재감을 드러낼 수 있는 비례대표 정당투표가 도입된 것이다. 두 요소가 결합된 2004년부터 사민주의 정당은 서울 지역구 선거를 뒤흔드는 변수가 되었다. 지역구에 출마하면 3~4%의 득표율은 기본적으로 얻고, 지역에 따라 10%대 득표율도 얻을 수 있으며, '신념형 정치인'이 많아서 선거에서 한 번 망하더라도 다음에 또 지역구 후보를 낼 수 있는 정당이 등장한 것이다. 거대 양당 입장에서는 일대일 구도를 벗어난 새로운 게임이 시작된 것이다. 
+이 추세에 균열을 낸 요소가 2000년대에 등장한다. 하나는 (당시 기준으로) 기존 원내정당과 전혀 다른 이념정책을 내세운 사민주의 정당의 등장이고, 또 하나는 '정당'의 존재감을 드러낼 수 있는 비례대표 정당투표가 도입된 것이다. 두 요소가 결합된 2004년부터 사민주의 정당은 서울 지역구 선거를 뒤흔드는 변수가 되었다. 지역구에 출마하면 3~~4%의 득표율은 기본적으로 얻고, 지역에 따라 10%대 득표율도 얻을 수 있으며, '신념형 정치인'이 많아서 선거에서 한 번 망하더라도 다음에 또 지역구 후보를 낼 수 있는 정당이 등장한 것이다. 거대 양당 입장에서는 일대일 구도를 벗어난 새로운 게임이 시작된 것이다. 
 
 2004년부터 서울의 지역구 선거 결과는 민주당계 정당과 사민주의 정당의 연합전선이 어떻게 짜여지느냐에 따라 격하게 변화했다. 2004년에는 노무현 대통령 탄핵 정국 속에서 "지역구 후보는 열린우리당, 정당투표는 민주노동당"이라는 구도로 유권자 스스로 두 당을 연합시켜서, 열린우리당의 지역구 32석(전체 48석) 획득과 민주노동당의 정당투표 13% 득표율을 만들어냈다. 반면 2008년에는 두 당의 연합이 전혀 이뤄지지 않았고 표가 분산되어, 한나라당(보수주류 정당) 후보들이 대략 48%의 득표율로 당선되는 상황이 다수 발생했다. 한나라당은 동북4구에서만 8석(전체 9석), 서울에서 40석(전체 48석)을 석권했다. 
 이 때의 충격을 잊지 못한 민주당계 정당과 사민주의 정당(민주통합당, 통합진보당)이 2012년에는 전 지역구에서 후보 단일화('민주-진보연대')를 해서 압승을 자신했지만, 이에 위기감을 느낀 서울 내 보수적 유권자가 새누리당(보수주류 정당)으로 집결하여 예측을 뛰어넘은 선전(16석 당선)을 거둔다. 민주당계 정당의 역습은 2016년에 이뤄지는데, 이 때는 반대로 '민주-진보연대'가 이뤄지지 않음에 따라 보수적인 표가 제3정당을 내세운 국민의당으로도 분산되었던 것이다. 민주당계 정당은 강남4구에서만 5석(전체 10석)을 얻으며 서울에서 35석(전체 49석)을 얻는다. 
@@ -15,22 +15,22 @@
 #### 서울 도심 + 동대문, 성동
 제아무리 익선동이나 을지로나 경리단길이나 성수동이 '힙'하더라도, 그 지역에서 표를 행사하는 유권자는 힙플레이스를 방문하는 사람들이 아니라, 그 주변에서 살고 있는 눈에 띄지 않는 주민들이다. 종로, 중구, 용산, 동대문, 성동 등을 아우르는 이 구역은 조선시대의 한성부, 일제시대의 경성부와 대부분 겹친다. 1950년대까지 서울의 거의 대부분이나 다름없던 이 곳은, 전국에서 정치토론과 정보교류가 가장 활발하여 이승만과 박정희의 독재정권을 신랄하게 비판하는 공간이었다. 즉 이 곳이야말로 민주당계 정당이 역사상 처음으로 발굴한 지역적 지지기반이기도 하다. 
 
-하지만 많은 대도시의 원도심이 보통 그렇듯, 1970년부터 서울이 확장됨에 따라 원도심 내 인구가 줄고 상대적으로 고령화되었고, 자연스레 보수주류 정당의 강세가 시작된다. 소선거구제가 부활한 1988년부터는 이 곳에서 꾸준히 보수주류 정당 중진이 탄생했다. 특히 보수주류 정당이 야당이던 2000년대 초반부터 두각을 드러내서 훗날 전국구 유명 정치인으로 성장한 <u>박진(종로구: 2002~12)</u>, <u>나경원(중구: 2008~11)</u>, <u>진영(용산구: 2004~16 한나라당-새누리당, 2016~20 더불어민주당)</u>, <u>홍준표(동대문구 을: 2001~12)</u>의 지역기반이 되었다.
+하지만 많은 대도시의 원도심이 보통 그렇듯, 1970년부터 서울이 확장됨에 따라 원도심 내 인구가 줄고 상대적으로 고령화되었고, 자연스레 보수주류 정당의 강세가 시작된다. 소선거구제가 부활한 1988년부터는 이 곳에서 꾸준히 보수주류 정당 중진이 탄생했다. 특히 보수주류 정당이 야당이던 2000년대 초반부터 두각을 드러내서 훗날 전국구 유명 정치인으로 성장한 <u>박진(종로구: 2002~~12)</u>, <u>나경원(중구: 2008~~11)</u>, <u>진영(용산구: 2004~~16 한나라당-새누리당, 2016~~20 더불어민주당)</u>, <u>홍준표(동대문구 을: 2001~~12)</u>의 지역기반이 되었다.
 
-그러나 2010년대 두 번의 총선에서 민주당계 정당이 승리하는 의미심장한 사건이 연달아 일어났다. 전북에서 올라온 중진 정세균<u>(종로구: 2012~20)</u>의 당선, 홍준표를 제치고 당선된 민병두<u>(동대문구 을: 2012~)</u>, 보건복지부 장관에서 사임한 진영의 민주당계 정당 입당 후 당선. 2016년 총선에서 보수주류 정당의 당선자는 오직 지상욱<u>(중구-성동구 을: 2016~)</u> 뿐이었으며, 그 역시 박근혜 대통령 탄핵 국면에 보수주류 정당을 떠나 보수개혁 정당(새로운보수당)에 합류했다. 이상의 사건은 뒤이어 계속해서 언급할, 민주당계 정당이 '수도권-대도시의 정당'이 되어가는 큰 흐름의 일부일 수도 있다. 
+그러나 2010년대 두 번의 총선에서 민주당계 정당이 승리하는 의미심장한 사건이 연달아 일어났다. 전북에서 올라온 중진 정세균<u>(종로구: 2012~~20)</u>의 당선, 홍준표를 제치고 당선된 민병두<u>(동대문구 을: 2012~~)</u>, 보건복지부 장관에서 사임한 진영의 민주당계 정당 입당 후 당선. 2016년 총선에서 보수주류 정당의 당선자는 오직 지상욱<u>(중구-성동구 을: 2016~~)</u> 뿐이었으며, 그 역시 박근혜 대통령 탄핵 국면에 보수주류 정당을 떠나 보수개혁 정당(새로운보수당)에 합류했다. 이상의 사건은 뒤이어 계속해서 언급할, 민주당계 정당이 '수도권-대도시의 정당'이 되어가는 큰 흐름의 일부일 수도 있다. 
 
 #### 서울 동북4구 + 광진, 중랑
-이 구역에서 가장 유명한 주민은 1980년대를 풍미한 <아기공룡 둘리>의 집(도봉구 쌍문동)주인, 고길동이다. 그 배경을 떠올려보면, 잘 구획된 골목길을 사이에 두고 작은 마당을 갖춘 단독주택들이 오밀조밀 모여있었다. 과거 좁디좁은 경성부 안에 꾸역꾸역 주택을 밀어넣었던 것과 달리, 1950~60년대에 서울로 편입된 동북4구와 광진, 중랑에는 (마치 2020년대의 하남과 남양주처럼) 60년대부터 80년대까지 당시 기준으로 새로이 정돈된 주거단지가 들어섰다. 이 주거단지는 80년대 중산층의 주요 거주지가 되어, 안정적인 경제기반을 갖추고 민주화의 열망을 강렬하게 표출하는 민주당계 정당의 표밭이 되었다. 
+이 구역에서 가장 유명한 주민은 1980년대를 풍미한 <아기공룡 둘리>의 집(도봉구 쌍문동)주인, 고길동이다. 그 배경을 떠올려보면, 잘 구획된 골목길을 사이에 두고 작은 마당을 갖춘 단독주택들이 오밀조밀 모여있었다. 과거 좁디좁은 경성부 안에 꾸역꾸역 주택을 밀어넣었던 것과 달리, 1950~~60년대에 서울로 편입된 동북4구와 광진, 중랑에는 (마치 2020년대의 하남과 남양주처럼) 60년대부터 80년대까지 당시 기준으로 새로이 정돈된 주거단지가 들어섰다. 이 주거단지는 80년대 중산층의 주요 거주지가 되어, 안정적인 경제기반을 갖추고 민주화의 열망을 강렬하게 표출하는 민주당계 정당의 표밭이 되었다. 
 
-그래서 동북4구와 광진, 중랑 권역의 주요 의원들을 나열하면, 80년대 이후 민주당계 정당의 40년 역사를 두루 살펴볼 수 있다. 80년대 정당 안팎에서 민주화운동의 핵심인사로 활동한 <u>이상수(중랑구 갑: 1988~92, 96~2004)</u>, <u>김근태(도봉구 갑: 1996~2008)</u>, <u>임채정(노원구 을/병: 1992~2008)</u>, <u>유인태(도봉구 을: 1992~96, 2004~08, 12~16)</u>. 같은 시기에 학생운동을 주도한 <u>신계륜(성북구 을: 1992~96, 2000~08, 12~16)</u>, <u>오영식(강북구 갑: 2004~08, 12~16)</u>, <u>우원식(노원구 을: 2004~08, 12~)</u>. 대통령 선거를 준비하던 김대중이 차기 인재로 낙점하여 정계 바깥에서 특별히 영입한 <u>추미애(광진구 을: 1996~2004, 08~20)</u>와 <u>김한길(광진구 갑: 2012~16)</u>. 지역사회 및 시민사회 활동을 바탕으로 정계에 진출한 <u>인재근(도봉구 갑: 2012~)</u>과 <u>유승희(성북구 갑: 2012~)</u>. 사민주의 정당의 초기 핵심 정치인으로 활동하다가 2012년 야권통합 기류를 따라 입당한 <u>박용진(강북구 을: 2016~)</u>. 
+그래서 동북4구와 광진, 중랑 권역의 주요 의원들을 나열하면, 80년대 이후 민주당계 정당의 40년 역사를 두루 살펴볼 수 있다. 80년대 정당 안팎에서 민주화운동의 핵심인사로 활동한 <u>이상수(중랑구 갑: 1988~~92, 96~~2004)</u>, <u>김근태(도봉구 갑: 1996~~2008)</u>, <u>임채정(노원구 을/병: 1992~~2008)</u>, <u>유인태(도봉구 을: 1992~~96, 2004~~08, 12~~16)</u>. 같은 시기에 학생운동을 주도한 <u>신계륜(성북구 을: 1992~~96, 2000~~08, 12~~16)</u>, <u>오영식(강북구 갑: 2004~~08, 12~~16)</u>, <u>우원식(노원구 을: 2004~~08, 12~~)</u>. 대통령 선거를 준비하던 김대중이 차기 인재로 낙점하여 정계 바깥에서 특별히 영입한 <u>추미애(광진구 을: 1996~~2004, 08~~20)</u>와 <u>김한길(광진구 갑: 2012~~16)</u>. 지역사회 및 시민사회 활동을 바탕으로 정계에 진출한 <u>인재근(도봉구 갑: 2012~~)</u>과 <u>유승희(성북구 갑: 2012~~)</u>. 사민주의 정당의 초기 핵심 정치인으로 활동하다가 2012년 야권통합 기류를 따라 입당한 <u>박용진(강북구 을: 2016~~)</u>. 
 
 위의 인물 나열에서, 유독 숫자 2008과 2012가 많이 보일 것이다. 2008년 총선에서 기존 민주당계 정당 출신 중진들이 모조리 낙선하는 큰 지각변동이 있었다. 이 때 보수주류 정당(한나라당)은 서울의 단독주택지구를 아파트 단지로 재개발한다는 '뉴타운' 공약을 내걸었고, 뉴타운 주요 사업구역이 속한 동북4구가 그 영향을 받은 것이다. 사민주의 정당(민주노동당, 진보신당)을 비롯한 진보정당들이 뉴타운 공약을 맹렬하게 비판하는 가운데 민주당계 정당(통합민주당)이 제대로 대응하지 못했고, 결국 대부분의 지역구에서 한나라당 48% : 민주당 44% : 진보정당 5% 정도의 득표율을 기록하며 한나라당이 압승(전체 13석 중 11석)을 거두었다. 이 11명의 한나라당 의원은 모두 초선의원이었고, 4년 뒤인 2012년 총선에서 모두 낙선했으며, 16년 총선에서 단 2명(정양석: 강북구 갑, 김선동: 도봉구 을)만 다시 돌아왔다.
 
 #### 서울 서북권
 조선시대부터 자연발생한 도시이고 (2000년대 이전까지는) 대규모 재개발이 없어서 수십 년째 거주하는 가족이 많은. 그럼에도 불구하고 대학교가 많고 교통이 나쁘지 않아서 젊은 인구의 전입/전출도 많은. 2000년대 이후 넓은 평수의 대단지 아파트가 연달아 들어서면서 서울 부동산 가격 상승을 주도하는. 그렇지만 소위 '자유롭고 젊은' 지역문화를 추구하는 가구소득이 적은 1인가구가 눈물을 머금고 거주하고 싶어하는. 이렇게 너무 다른 문화가 모여있으면, 각 문화를 가장 잘 대변하고 성향 뚜렷한 사람끼리 대결하여 당선되는 것일까? 서울 서북권에는 정당을 막론하고 좋은 의미로든 나쁜 의미로든 자기 주장이 분명히 드러나는 '꼬장꼬장한 유명 언더독' 국회의원이 많이 배출되었다. 
 
-보수주류 정당 출신의 <u>이재오(은평구 을: 1996~2008, 10~16)</u>와 <u>정두언(서대문구 을: 2004~16)</u>은 이명박의 대통령 당선에 크게 기여한 뒤 중진의 위치에서 박근혜 행정부를 틈틈이 비판하였다. 그 이재오가 원래는 1992년에 사민주의 계열 정당(민중당)을 창당해 출마했던 것처럼, 2007년에 창조한국당을 창당해 대선과 총선에 참여한 기업인 출신 <u>문국현(은평구 을: 2008~10)</u>도 이재오를 꺾고 이 권역에 자리잡았다. 
-1987년 연세대학교 총학생회장이자 이한열 민주국민장 집행위원장인 <u>우상호(서대문구 갑: 2004~08, 12~)</u>는 2000년 연세대가 속한 서대문구 갑에 공천되는데, 이 때 같은 당에서 공천탈락한 인물은, 당 총재 김영삼의 <u>3당 합당(2권 '정당과 역사', p.XXX 참조)</u>을 반대하며 '꼬마 민주당'에 잔류했던 <u>김상현(서대문구 갑: 1965~67, 71~73, 92~2000)</u>이었다. 우상호 이후의 90년대 학생운동으로 사회운동에 발을 들이고 <u>민변(민주사회를 위한 변호사 모임. 노동운동, 인권운동, 공익사건 등의 변호를 맡는 변호사들로 구성된 시민단체. 주요 정치인 중 과거 민변 회원으로 노무현, 오세훈, 이정희, 이재명, 박원순, 문재인 등이 있다.)</u> 사무처장과 세월호 침몰사고 진상규명 관련 법률지원 활동으로 유명한 <u>박주민(은평구 갑: 2016~)</u>도 이 권역에 자리잡았다. 2004년 이후 마포구 을 지역구의원 3명 - <u>정청래(2004~08, 12~16)</u>, <u>강용석(2008~12)</u>, <u>손혜원(2016~20)</u> - 은 (좋게 표현하여) 강렬하고 엉뚱하며 직설적인 발화로 전국적 유명세를 떨치기도 했다. 
+보수주류 정당 출신의 <u>이재오(은평구 을: 1996~~2008, 10~~16)</u>와 <u>정두언(서대문구 을: 2004~~16)</u>은 이명박의 대통령 당선에 크게 기여한 뒤 중진의 위치에서 박근혜 행정부를 틈틈이 비판하였다. 그 이재오가 원래는 1992년에 사민주의 계열 정당(민중당)을 창당해 출마했던 것처럼, 2007년에 창조한국당을 창당해 대선과 총선에 참여한 기업인 출신 <u>문국현(은평구 을: 2008~~10)</u>도 이재오를 꺾고 이 권역에 자리잡았다. 
+1987년 연세대학교 총학생회장이자 이한열 민주국민장 집행위원장인 <u>우상호(서대문구 갑: 2004~~08, 12~~)</u>는 2000년 연세대가 속한 서대문구 갑에 공천되는데, 이 때 같은 당에서 공천탈락한 인물은, 당 총재 김영삼의 <u>3당 합당(2권 '정당과 역사', p.XXX 참조)</u>을 반대하며 '꼬마 민주당'에 잔류했던 <u>김상현(서대문구 갑: 1965~~67, 71~~73, 92~~2000)</u>이었다. 우상호 이후의 90년대 학생운동으로 사회운동에 발을 들이고 <u>민변(민주사회를 위한 변호사 모임. 노동운동, 인권운동, 공익사건 등의 변호를 맡는 변호사들로 구성된 시민단체. 주요 정치인 중 과거 민변 회원으로 노무현, 오세훈, 이정희, 이재명, 박원순, 문재인 등이 있다.)</u> 사무처장과 세월호 침몰사고 진상규명 관련 법률지원 활동으로 유명한 <u>박주민(은평구 갑: 2016~~)</u>도 이 권역에 자리잡았다. 2004년 이후 마포구 을 지역구의원 3명 - <u>정청래(2004~~08, 12~~16)</u>, <u>강용석(2008~~12)</u>, <u>손혜원(2016~~20)</u> - 은 (좋게 표현하여) 강렬하고 엉뚱하며 직설적인 발화로 전국적 유명세를 떨치기도 했다. 
 
 
 #### 서울 강서/영등포권
@@ -38,12 +38,12 @@
 
 우리가 흔히 동네의 소득수준이나 개발구성을 고려하여 떠올릴 수 있는 지역구별 선거구도가 있다. 그러나 강서/영등포권에서는 2010년대 들어서 이를 거스르는 사례가 다수 등장한다. 젊은 학생과 노동자, 전라권 출신 이주민 비율이 높아서 전통적인 민주당계 정당 강세지역이었던 관악구 갑/을과 금천구에서는, 2016년 총선 기준으로 보수주류 정당과 중도 제3세력 정당이 급격하게 성장하여 합산 득표율이 60%를 차지할 정도가 되었다. 반대로 부촌인 목동과 여의도의 존재로 인해 전통적인 보수주류 정당 강세지역이었던 양천구 갑과 영등포구 을에서는, 2012년부터 보수주류 정당과 민주당계 정당이 득표율에서 거의 1:1의 승부를 벌이면서 16년에 더불어민주당이 모두 승리하는 결과가 나왔다. 
 
-강서/영등포에서 기존 구도가 흔들리는 것은 2016년에 특히 두드러졌으며, 이를 주도한 것은 민주당계 소수정당이었다. 당시 국민의당과 <u>'민주당'(더불어민주당과는 별개의 정당이다. 민주당계 정당 소속으로 과거 영등포구 을 재선 국회의원(1996~2002)과 서울시장 후보(2002)를 역임한 김민석을 중심으로 2014년에 창당한 정당이다. 2016년 총선을 앞두고 더불어민주당에서 공천탈락한 강서구 갑 4선 국회의원 신기남(1996~2008, 12~16)이 입당하여 잠시 원내정당이 되었고, 2016년 더불어민주당과 합당하였다.)</u>의 득표율을 합했을 때, 강서/영등포의 14개 지역구 중 7곳에서 득표율이 20%를 넘었다. 서울 나머지 35개 지역구에서는 6곳이었던 것과 비교해서 매우 두드러진 차이이다. 
+강서/영등포에서 기존 구도가 흔들리는 것은 2016년에 특히 두드러졌으며, 이를 주도한 것은 민주당계 소수정당이었다. 당시 국민의당과 <u>'민주당'(더불어민주당과는 별개의 정당이다. 민주당계 정당 소속으로 과거 영등포구 을 재선 국회의원(1996~~2002)과 서울시장 후보(2002)를 역임한 김민석을 중심으로 2014년에 창당한 정당이다. 2016년 총선을 앞두고 더불어민주당에서 공천탈락한 강서구 갑 4선 국회의원 신기남(1996~~2008, 12~~16)이 입당하여 잠시 원내정당이 되었고, 2016년 더불어민주당과 합당하였다.)</u>의 득표율을 합했을 때, 강서/영등포의 14개 지역구 중 7곳에서 득표율이 20%를 넘었다. 서울 나머지 35개 지역구에서는 6곳이었던 것과 비교해서 매우 두드러진 차이이다. 
 
 
 #### 서울 강남4구
 1970년대부터 개발된 서울 안의 신도시, 강남4구의 정치구도는 매우 독특하다. 부동산 개발 붐의 경험, '강남 8학군'과 '대치동 학원가'로 일컬어지는 교육환경, 대형교회 중심의 보수적 종교 커뮤니티를 바탕으로, 시장 친화적이고 경쟁 친화적이며 보수적 사회관을 가진 표심이 상당하다. 자본과 지식을 가진 다양한 직업군의 엘리트 계층이 많이 산다는 점에서, 한국 사회의 보수적 담론을 생산하는 중심지라고도 할 수 있다. 
-다만 세간의 이미지와 달리, 강남4구가 중앙정치에서 이러한 태도를 보인 것은 그다지 오래되지 않았다. 1980~90년대만 해도, 강남4구에는 민주당계 정당 출신이지만 김영삼을 따라서 또는 3김 정치에 반대하며 보수주류 정당으로 입당한 민주화운동 출신 중진이 많았다. <u>김덕룡(서초구 을: 1988~2008)</u>, <u>홍사덕(강남구 을: 1992~2000)</u>, <u>이부영(강동구 갑: 1992~2004)</u>이 대표적이다. 또한 소장파로 평가받는 전국구 유명 정치인도 많았다. 보수주류 정당에서는 <u>홍준표(송파구 갑: 1996~2000)</u>, <u>오세훈(강남구 을: 2000~04)</u>, <u>이혜훈(서초구 갑: 2004~12, 2016~)</u>이 그런 포지션을 차지했고, 소위 '깨끗함'과 정치평론으로 전국적으로 알려졌던 <u>박찬종(무소속/신정치개혁당, 서초구 갑: 1988~95)</u>과 <u>김동길(통일국민당, 강남구 갑: 1992~96)</u>도 그렇게 인식되었다. 
+다만 세간의 이미지와 달리, 강남4구가 중앙정치에서 이러한 태도를 보인 것은 그다지 오래되지 않았다. 1980~~90년대만 해도, 강남4구에는 민주당계 정당 출신이지만 김영삼을 따라서 또는 3김 정치에 반대하며 보수주류 정당으로 입당한 민주화운동 출신 중진이 많았다. <u>김덕룡(서초구 을: 1988~~2008)</u>, <u>홍사덕(강남구 을: 1992~~2000)</u>, <u>이부영(강동구 갑: 1992~~2004)</u>이 대표적이다. 또한 소장파로 평가받는 전국구 유명 정치인도 많았다. 보수주류 정당에서는 <u>홍준표(송파구 갑: 1996~~2000)</u>, <u>오세훈(강남구 을: 2000~~04)</u>, <u>이혜훈(서초구 갑: 2004~~12, 2016~~)</u>이 그런 포지션을 차지했고, 소위 '깨끗함'과 정치평론으로 전국적으로 알려졌던 <u>박찬종(무소속/신정치개혁당, 서초구 갑: 1988~~95)</u>과 <u>김동길(통일국민당, 강남구 갑: 1992~~96)</u>도 그렇게 인식되었다. 
 보수주류 정당이 강남4구에서 60%에 근접하는 압도적인 득표율을 얻는 것은 2000년 이후의 일이다. 시점으로 보면, 김대중-노무현 행정부를 거치며 한국 정치에서 '보수정당', '민주당'과 '진보정당'의 구도가 구체적으로 드러나는 시점과 일치한다. 또 한편으로는 부동산 가격 급상승으로 강남4구 주택보유자의 고정자산이 급증하는 시기와도 일치한다. 
 
 이렇게 '무작정 보수적이지는 않았던' 강남4구의 기억이 남아있어서 그런지, 민주당계 주류정당의 도전이 거셌다. 2012년부터 전라권 당 중진과 유명한 현역 의원들이 강남4구에 연이어 공천된 것이다. 2012년에는 노무현 행정부의 장관 출신인 정동영(강남구 을)과 천정배(송파구 을), 전북 4선 의원인 정균환(송파구 병), 그리고 민주당계 주류정당으로 다시 돌아온 이부영(강동구 갑)이 출마했지만 전원 낙선했다. 그 노력의 효과는 2016년에 나타난다. 이 때도 더불어민주당은 전남 4선 의원인 김성곤(강남구 갑), 대표적인 여성시민운동 출신의 비례대표 국회의원 남(윤)인순(송파구 병), 진선미(강동구 갑) 등이 출마했다. 이 때 민주당계 중도정당(국민의당)이 보수주류 정당(새누리당)의 득표를 일부 흡수한 것 까지 더해져서, 남인순, 진선미, 전현희(강남구 을), 최명길(송파구 을)이 당선되었다. 2012년에 민주당계 주류정당이 중진을 내세워 도전한 지역구에서, 4년 만에 모두 승리를 거둔다.
@@ -52,7 +52,7 @@
 ##### 서울 종로구
 **전국구 배틀그라운드 #1**
 
-공화국이 탄생한 이래 종로는 언제나 '정치 1번지'로 불렸다. 청와대와 광화문광장이 위치했고, 중앙선관위의 행정절차상 지역구 순번에서 언제나 첫 번째에 위치했기 때문이기도 하지만, 무엇보다도 거물급 인사가 많이 출마하는 최고의 전장이라는 점이 있다. 이 곳에서 국회의원을 역임한 '주요' 인사만 살펴보자. 3명의 대통령(윤보선: 1954~60, 이명박: 1996~98, 노무현: 1998~2000), 1명의 국회의장(정세균: 2012~20), 1명의 부통령(장면: 1948~50)과 2명의 국무총리(장면, 정세균), 2명의 서울시장(윤보선, 이명박). 여기에 <대한민국헌법> 초안 작성자(유진오: 1967~71), 한국 최초의 여성 제1야당 대표이자 여성 최다선 의원(박순천: 1950~54)이 종로구를 거쳐갔다. 가장 '무서운' 라인업을 보여준 1996년의 후보(이명박, 이종찬, 노무현, 김을동 등) 4명의 일생을 합하면 대통령 10년과 국회의원 35년이 된다.
+공화국이 탄생한 이래 종로는 언제나 '정치 1번지'로 불렸다. 청와대와 광화문광장이 위치했고, 중앙선관위의 행정절차상 지역구 순번에서 언제나 첫 번째에 위치했기 때문이기도 하지만, 무엇보다도 거물급 인사가 많이 출마하는 최고의 전장이라는 점이 있다. 이 곳에서 국회의원을 역임한 '주요' 인사만 살펴보자. 3명의 대통령(윤보선: 1954~~60, 이명박: 1996~~98, 노무현: 1998~~2000), 1명의 국회의장(정세균: 2012~~20), 1명의 부통령(장면: 1948~~50)과 2명의 국무총리(장면, 정세균), 2명의 서울시장(윤보선, 이명박). 여기에 <대한민국헌법> 초안 작성자(유진오: 1967~~71), 한국 최초의 여성 제1야당 대표이자 여성 최다선 의원(박순천: 1950~~54)이 종로구를 거쳐갔다. 가장 '무서운' 라인업을 보여준 1996년의 후보(이명박, 이종찬, 노무현, 김을동 등) 4명의 일생을 합하면 대통령 10년과 국회의원 35년이 된다.
 그 외 주요 당선/낙선자 명단에 김두한, 조경철, 제정구, 유인태, 김홍신, 손학규, 홍사덕, 오세훈, 하승수 등. 각종 정당의 정계 거물과 유명인이 포진해있다. 사회운동의 측면에서도, 한국 최초의 커밍아웃 성소수자 국회의원 후보가 출마한(최현숙, 진보신당, 2008) 역사적 상징성도 있다. 이런 상징성 때문에라도 각 정당에서는 경쟁적으로 거물 인사를 종로구에 출마시킨다. 이것만으로도 종로를 주목할 이유는 충분하지 아니한가.
 
 ##### 서울 용산구
@@ -65,7 +65,7 @@
 **전국구 배틀그라운드 #2**
 
 사실, 이념에 따른 정당구도가 자리잡은 이후 종로보다도 전국구로 좀 더 주목받은 지역구가 따로 있다. 2004년에 처음 설치된 노원구 병으로, 이 곳에서는 전국구 인물이 계속 당선되었다. 04년에 민주당계 정당의 4선 중진(임채정: 열린우리당), 08년에 보수주류 정당의 소장파로 알려진 언론사 사장 출신의 젊은 초선(홍정욱: 한나라당), 12년에 서울 최초의 사민주의 정당 의원(노회찬: 통합진보당-정의당), 14년(보궐선거)과 16년에 제3정당의 유력 대선후보(안철수: 무소속/국민의당)가 이 곳에서 선출되었다. 이 시기의 주요 낙선자로는 노회찬 공동대표(진보신당: 2008), 허준영 전 코레일 사장(새누리당: 2012), 이준석 최고위원(새누리당: 2016, 바른미래당: 2018)이 있는데, 이들은 선거 당시에 이미 전국구 인물이라고 평가받았다. 
-2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 "상계동"이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
+2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~~18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 "상계동"이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
 
 <!--##### 서울 마포구 을-->
 
@@ -78,15 +78,15 @@
 ##### 서울 관악구 갑·을
 **복잡다난한 총선에서 가장 복잡다난한 지역구**
 
-2000~12년의 4번의 총선에서, 보수주류 정당은 관악구 을에서 0번, 갑에서 1번만 승리한다. 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져 민주당계 정당의 지지세가 매우 강하다. 같은 이유로 사민주의 정당의 지역조직도 탄탄하다. 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 5%를 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당). 
+2000~~12년의 4번의 총선에서, 보수주류 정당은 관악구 을에서 0번, 갑에서 1번만 승리한다. 관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져 민주당계 정당의 지지세가 매우 강하다. 같은 이유로 사민주의 정당의 지역조직도 탄탄하다. 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 5%를 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당). 
 그러나 관악구 갑·을의 현재 국회의원인 김성식(p.000 참조)과 오신환은 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 2016년 총선에서 두 후보의 당선은 나름의 파란이었다. 김성식은 안철수와 함께 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원었고, 오신환은 지역구 사상 첫 보수주류 정당(새누리당) 의원이 재선까지 성공한 경우였다. 두 의원은 2019년 바른미래당 원내대표 선거에서 맞붙을 정도로, 당내외에서 두루 인정받는 중견 정치인이 되었다. 
-관악구는 이처럼 거대양당 뿐만 아니라 3~4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
+관악구는 이처럼 거대양당 뿐만 아니라 3~~4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
 
 <!--
-관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론의 중심지, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져서, 민주당계 정당 뿐만 아니라 사민주의 정당의 지역조직이 다른 지역구에 비해서 매우 강하다. 2000~2012년 사이의 4번의 총선에서, 보수주류 정당은 관악구 갑에서 1번 승리하고, 을에서는 한 번도 당선되지 못한다. 한편 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 자력으로 5%가 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당).  
+관악구는 젊은 인구구성, 서울대학교를 중심으로 한 사회개혁 여론의 중심지, 상대적으로 낮은 소득수준, 높은 비율의 전라권 이주민 비중의 4가지 요소가 합쳐져서, 민주당계 정당 뿐만 아니라 사민주의 정당의 지역조직이 다른 지역구에 비해서 매우 강하다. 2000~~2012년 사이의 4번의 총선에서, 보수주류 정당은 관악구 갑에서 1번 승리하고, 을에서는 한 번도 당선되지 못한다. 한편 사민주의 정당은 같은 기간의 8번(갑·을) 중에서 5번이나 자력으로 5%가 넘는 득표율을 기록했는데, 그 중 한 번은 민주-진보연대를 통해 당선되기도 했다(이상규: 2012, 관악구 을, 통합진보당).  
 그러나 현재 국회의원은 모두 과거 보수주류 정당에 몸담은 적 있는 중도보수 계열 정치인이다. 관악구 갑의 김성식은 2008년에 보수주류 정당(한나라당)으로 당선되었고, 2012년 이후 안철수의 창당작업에 지속적으로 참여하여 2016년 민주당계 중도정당(국민의당)으로 다시 당선된다. 이로서 그는 안철수와 함께, 전라권 바깥에서 당선된 국민의당 유이의 지역구 국회의원이 된다. 당시에 관악구 을에서도 국민의당(이행자) 후보는 23.5%의 고득표를 기록해서, 국민의당의 지역 조직력을 한껏 드러냈다.
 한편 관악구 을의 오신환은 2015년에 당선된 지역구 사상 첫 보수주류 정당(새누리당) 소속 의원이다. 다만 그는 2017년부터 바른정당-바른미래당-새로운보수당으로 이어지는 보수개혁 정당과 함께 한다. 김성식과 오신환은 2019년 바른미래당 원내대표 선거에서 출마해 맞붙을 정도로, 당내외에서 중진으로 두루 인정받는 정치인이 되었다. 
-관악구는 이처럼 거대양당 뿐만 아니라 3~4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
+관악구는 이처럼 거대양당 뿐만 아니라 3~~4개의 다양한 정당들이 경쟁을 통해 유의미한 득표율을 기록할 수 있는 곳이다. 따라서 모든 정당이 공을 들여 난투를 벌이는 재미있는 구도를 관찰할 수 있을 것이다. 
 -->
 
 
@@ -101,9 +101,9 @@
 #### 인천광역시
 인천의 독특한 인구구성은 인천의 정치구도를 아주 복잡하게 만들었다. 인천에는 (1)해방과 한국전쟁 기간에 배를 타고 남한으로 이주한 이북5도 주민, (2)고도경제성장기에 인천의 공장에서 일하기 위해 배를 타고 이주한 충청권 주민, (3)서울에서 살다가 자신의 터전이 재개발되며 어쩔 수 없이 이주한 수도권 도시노동자가 일정하게 섞여있다. 반공보수의 가치, 충청권 지역주의의 영향력, 노동운동의 근거지라는 속성을 두루 갖춘 셈이다. 그런 탓에 인천에서 각 정당은 매우 역동적으로 움직인다. 인천의 총선 역사는, 굳건해보이는 보수주류 정당을 상대로 승리하기 위해 나머지 정당들이 합종연횡한 역사이기도 하다. 
 인천에서 보수주류 정당이 처음으로 과반의석을 놓친 것은 2000년이다. 1997년 대선에서 민주당계 정당과 충청권 보수정당이 후보를 단일화했고, 대통령(김대중: 새정치국민회의)과 국무총리(김종필: 자유민주연합)을 배출하며 두 당의 공동정부가 구성된다. 이는 총선에서 충청권 보수정당을 지지하던 유권자가 민주당계 정당으로 이동하는 효과를 낳았는데, 소선거구제에서 '상대편'에 해당하는 보수주류 정당을 이기기 위함이라고 보인다. 
-2008년에 다시 보수주류 정당이 10석(한나라당 탈당 후 복당한 1석 포함)을 차지하자, 2012년부터는 민주당계 정당과 사민주의 정당이 모든 지역구에서 후보단일화를 했다. 2012년의 후보단일화는 전국적으로 이뤄졌지만, 다른 지역과 달리 인천에서는 단일화 과정에서 두 당(민주통합당, 통합진보당) 사이의 잡음이 별로 없었다. 게다가 2016년에는 두 당(더불어민주당, 정의당)이 단일화를 거부한 상황에서 인천시당 차원에서 단일화를 진행했으며, 민주당계 중도정당(국민의당)도 중앙당과 다르게 마지막까지 단일화 가능성을 타진했다. 이것이 가능했던 것은, 인천에서 두 당 후보들의 관계가 특별히 좋기 때문으로 보인다. 인천의 민주당계 정당 주요 후보들 - 송영길, 문병호, 홍영표 등 - 도 사민주의 정당 후보들과 함께 80~2000년대 인천의 노동운동을 조직적으로 이끈 '활동가 동지'의 경험이 있다. 사민주의 정당 역시 단일화를 통해 2010년에 역사상 첫 구청장(조택상: 동구, 배진교: 남동구)을 배출한 중요한 경험을 가졌다.
+2008년에 다시 보수주류 정당이 10석(한나라당 탈당 후 복당한 1석 포함)을 차지하자, 2012년부터는 민주당계 정당과 사민주의 정당이 모든 지역구에서 후보단일화를 했다. 2012년의 후보단일화는 전국적으로 이뤄졌지만, 다른 지역과 달리 인천에서는 단일화 과정에서 두 당(민주통합당, 통합진보당) 사이의 잡음이 별로 없었다. 게다가 2016년에는 두 당(더불어민주당, 정의당)이 단일화를 거부한 상황에서 인천시당 차원에서 단일화를 진행했으며, 민주당계 중도정당(국민의당)도 중앙당과 다르게 마지막까지 단일화 가능성을 타진했다. 이것이 가능했던 것은, 인천에서 두 당 후보들의 관계가 특별히 좋기 때문으로 보인다. 인천의 민주당계 정당 주요 후보들 - 송영길, 문병호, 홍영표 등 - 도 사민주의 정당 후보들과 함께 80~~2000년대 인천의 노동운동을 조직적으로 이끈 '활동가 동지'의 경험이 있다. 사민주의 정당 역시 단일화를 통해 2010년에 역사상 첫 구청장(조택상: 동구, 배진교: 남동구)을 배출한 중요한 경험을 가졌다.
 
-이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, "서울과 가까우면 민주당계, 멀면 보수주류" 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 안상수(중구-동구-강화군-옹진군: 2016~), 홍일표(남구 갑: 2008~), 윤상현(남구 을: 2008~), 황우여(연수구: 2000~16), 이학재(서구 갑: 2008~)는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 홍영표(부평구 을: 2009~), 문병호(부평구 갑: 2004~08, 12~16), 송영길(계양구 을: 2000~10, 16~)은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
+이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, "서울과 가까우면 민주당계, 멀면 보수주류" 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 안상수(중구-동구-강화군-옹진군: 2016~~), 홍일표(남구 갑: 2008~~), 윤상현(남구 을: 2008~~), 황우여(연수구: 2000~~16), 이학재(서구 갑: 2008~~)는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 홍영표(부평구 을: 2009~~), 문병호(부평구 갑: 2004~~08, 12~~16), 송영길(계양구 을: 2000~~10, 16~~)은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
 
 
 #### 수원, 성남, 고양
@@ -113,12 +113,12 @@
 다만 2010년대부터 세 도시 모두 과거에 비해 진보적 성향을 보이는 공통점을 보이기 시작했다. 이는 . 민주당게 정당과 사민주의 정당이 '수도권과 대도시의 정당'이 되어가면서 
 
 #### 서울 서남부 인접 위성도시
-지금 이 파트에서 설명하는 "서울 서남부 인접 위성도시"는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~70년대 주거지의 역사를 알아야 한다.
+지금 이 파트에서 설명하는 "서울 서남부 인접 위성도시"는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~~80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~~70년대 주거지의 역사를 알아야 한다.
 서울 서남부 인접권역은 일제시대 때에 이미 경성과 인천으로 이어지는 도로망을 갖추어 읍내가 발전한 곳이다. 그러나 60년대 이후 공업도시로서 서울(특히 구로-영등포)과 인천(특히 부평)이 발전하면서 이 권역의 성격이 바뀐다. 공장의 일자리를 찾아 수도권으로 이주했지만 포화된 서울과 인천에 들어가지 못한 사람들, 또는 중앙정부 주도로 진행된 서울 도시정비사업으로 강제로 쫓겨난 사람들이 발생하기 시작했다. 서울 서남부 인접권역은 이들이 정착할 수 있는 몇 안되는 거주지역이었다. 당시 중앙정부는 없는 경제자원을 쥐어짜서 서울, 부산 등 폭발적으로 커지는 대도시의 생활인프라를 확충하는 것만으로도 벅찼고, 지방자치는 시행되지 않아서 도시가 자체적으로 시설확충을 꾀할 수도 없었다. 결국 중앙정부가 작정하고 신도시를 개발하기 전까지, 이 권역은 불균형한 경제발전의 문제점을 도시노동자가 생활 곳곳에서 온몸으로 떠안아야 하는 현장이 되었다.
-이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 '철거민의 대부'로 불리운 제정구(시흥시-군포시: 1992~99). 아버지가 빈민구제운동 일환으로 설립한 집단농장 "풀무원농장"의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 원혜영(부천시 오정구: 1992~96, 2004~20). 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 손학규(광명시: 1993~98, 2000~02). 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 김문수(부천시 소사구: 1996~2006). 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
+이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 '철거민의 대부'로 불리운 제정구(시흥시-군포시: 1992~~99). 아버지가 빈민구제운동 일환으로 설립한 집단농장 "풀무원농장"의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 원혜영(부천시 오정구: 1992~~96, 2004~~20). 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 손학규(광명시: 1993~~98, 2000~~02). 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 김문수(부천시 소사구: 1996~~2006). 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
 
 #### 경기 서남부
-서해를 끼면서 시흥-안산-화성-오산-평택으로 이어지는 5개 시의 공업단지에는 중소 제조기업부터 자동차/전자계열 대기업에 이르는 다양한 공장이 즐비하다. 하지만 그 모든 영역이 공장으로만 채워져있진 않아서, 밀집된 도시(거주지)와 공단과 농촌을 번갈아 볼 수 있다. 이처럼 같은 도시 안에서도 인구밀도와 경제구조와 사람들의 계층이 다르기 때문에, 이 지역의 정치성향은 읍면동별, 선거구별로 아주 다르다. 도시나 공업지대 중에서도 밀집도가 높은 읍/동으로만 구성된 곳에서는 조정식(시흥시 을: 2004~), 김영환(안산시 상록구 갑/을: 1996~2004, 2009~16), 천정배(안산시 단원구 갑: 1996~2012), 안민석(오산시: 2004~) 등 4선씩 하는 민주당계 정당 중진들이 꾸준히 배출되었다. 반면 조금이라도 농촌의 비율이 높은 곳은 보수주류 정당의 힘이 세서, 원유철(평택시 갑: 1996~2004, 08~20), 서청원(화성시 갑: 2013~) 같은 당내 우파에 해당하는 중진들이 자리잡곤 한다. 이 지역의 농촌은 공업지대의 존재와 무관하게 (곧 등장할) 경기도 외곽의 다른 농촌지역과 유사한 속성을 가졌다.
+서해를 끼면서 시흥-안산-화성-오산-평택으로 이어지는 5개 시의 공업단지에는 중소 제조기업부터 자동차/전자계열 대기업에 이르는 다양한 공장이 즐비하다. 하지만 그 모든 영역이 공장으로만 채워져있진 않아서, 밀집된 도시(거주지)와 공단과 농촌을 번갈아 볼 수 있다. 이처럼 같은 도시 안에서도 인구밀도와 경제구조와 사람들의 계층이 다르기 때문에, 이 지역의 정치성향은 읍면동별, 선거구별로 아주 다르다. 도시나 공업지대 중에서도 밀집도가 높은 읍/동으로만 구성된 곳에서는 조정식(시흥시 을: 2004~~), 김영환(안산시 상록구 갑/을: 1996~~2004, 2009~~16), 천정배(안산시 단원구 갑: 1996~~2012), 안민석(오산시: 2004~~) 등 4선씩 하는 민주당계 정당 중진들이 꾸준히 배출되었다. 반면 조금이라도 농촌의 비율이 높은 곳은 보수주류 정당의 힘이 세서, 원유철(평택시 갑: 1996~~2004, 08~~20), 서청원(화성시 갑: 2013~~) 같은 당내 우파에 해당하는 중진들이 자리잡곤 한다. 이 지역의 농촌은 공업지대의 존재와 무관하게 (곧 등장할) 경기도 외곽의 다른 농촌지역과 유사한 속성을 가졌다.
 특이하게, 경기 서남부는 여타 수도권 지역에 비해 제3정당(보수계열 또는 민주당 계열)이 많이 지지받는다. 1996년의 자유민주연합(충청권 제3정당)과 통합민주당(민주당계 소수정당)은 각각 2석과 1석을 얻었고, 무소속으로 당선된 초선의원 원유철은 1997년 대선을 앞두고 이인제가 창당한 국민신당으로 이적한 바 있다. 2008년에는 경상권 바깥에서 유일한 친박연대(보수계열 소수정당) 당선인(홍장표: 안산시 상록구 을)을 배출했으며, 2016년 총선에는 안산의 두 현역의원(김영환, 부좌현)과 과거 중진의원(천정배: 광주광역시 서구 을 출마)이 국민의당(민주당계 소수정당)으로 이적해 출마하기도 했다. 당시 국민의당은 (비록 모두 낙선하긴 했지만) 경기 서남부의 12개 지역구 중 8곳에서 지역구 후보 득표율이 20%를 넘었다. 나머지 경기도 48개 지역구에서는 5곳에 불과했던 것과 비교된다. 2020년 현재의 현역의원 중에서도, 보수주류 정당을 나와서 보수개혁 정당에 몸담았거나(박순자, 안산시 단원구 을) 계속 몸담고 있는(유의동, 평택시 을) 경우가 있다. 
 
 #### 경기 북부, 동남부 외곽지역
@@ -161,9 +161,9 @@
 
 
 ### 강원도
-우리가 전통적으로 알고 있는 충청·전라·경북·경남권의 표심이 <u>1990년대 이후의 지역주의 발현(흔한 오해와 달리, 1990년 이전에는 한국 국회의원 선거에서 지역주의가 그다지 강력하지 않았다. 그 구체적인 내용은 )</u>과 함께 탄생한 것과 달리, 강원도의 보수적 표심은 1950년대부터 형성되었다. 강원도는 한국전쟁의 전선이 고착화된 시기(1951~53) 고지전이 일상적으로 일어난 주요 전장이었고, 지형이 험해서 도시화가 쉽게 진행되지 않아서 유권자의 정치적 의견교환이 쉽지 않았다. 일반적인 농촌의 보수적 표심에 국방안보와 반공에 대한 열망까지 합쳐져서, 군사정권을 강력하게 지지하는 공간이 되었다. 1971년 총선에서 민주당계 정당(신민당, 국민당)이 경상북도(전체 24석)에서 9석이 당선되었을 그 때에도, 강원도(전체 9석)에서는 불과 1석만 확보할 수 있었다. 1선거구에서 2명(2위까지)이 당선되던 1985년 총선의 지역구 6곳에서도, 김영삼과 김대중이 참여한 신한민주당은 모두 3등 이하로 낙선했고, 보수주류 집권당(민주정의당)이 전원 1위로 당선, 1기 군사정권 출신으로 구성된 한국국민당이 4곳에서 2등으로 당선되었다. 
+우리가 전통적으로 알고 있는 충청·전라·경북·경남권의 표심이 <u>1990년대 이후의 지역주의 발현(흔한 오해와 달리, 1990년 이전에는 한국 국회의원 선거에서 지역주의가 그다지 강력하지 않았다. 그 구체적인 내용은 )</u>과 함께 탄생한 것과 달리, 강원도의 보수적 표심은 1950년대부터 형성되었다. 강원도는 한국전쟁의 전선이 고착화된 시기(1951~~53) 고지전이 일상적으로 일어난 주요 전장이었고, 지형이 험해서 도시화가 쉽게 진행되지 않아서 유권자의 정치적 의견교환이 쉽지 않았다. 일반적인 농촌의 보수적 표심에 국방안보와 반공에 대한 열망까지 합쳐져서, 군사정권을 강력하게 지지하는 공간이 되었다. 1971년 총선에서 민주당계 정당(신민당, 국민당)이 경상북도(전체 24석)에서 9석이 당선되었을 그 때에도, 강원도(전체 9석)에서는 불과 1석만 확보할 수 있었다. 1선거구에서 2명(2위까지)이 당선되던 1985년 총선의 지역구 6곳에서도, 김영삼과 김대중이 참여한 신한민주당은 모두 3등 이하로 낙선했고, 보수주류 집권당(민주정의당)이 전원 1위로 당선, 1기 군사정권 출신으로 구성된 한국국민당이 4곳에서 2등으로 당선되었다. 
 
-하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 <u>3대 관변단체(중앙정부 차원에서 별도의 "조직육성법" 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 "조직육성법"을 통해 보장받는다.)</u>의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 이런 조직의 힘은 전국의 모든 지역에 존재하지만, 강원도처럼 산세가 험하여 다른 마을과 교류가 힘든 '좁은 사회' 안에서는 조직의 힘이 특히 강하다. 다른 조직이나 자원이 접근하기 어려운 마을 안에서, 정부의 행정권력을 통해 자원을 확보한 조직은 '매마른 지역 안에서 가장 샘물이 풍부하게 흐르기 때문에' 독보적인 영향력을 행사할 수 있기 때문이다. 대통령 및 강원도지사 선거같은 도 단위 선거에서는 그나마 이 조직의 영향이 적지만, 작은 행정구역을 중심으로 진행되는 지역구국회의원, 강원도의회, 구·시·군의 장 선거에서는 조직의 힘이 강력하다. 
+하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~~3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 <u>3대 관변단체(중앙정부 차원에서 별도의 "조직육성법" 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 "조직육성법"을 통해 보장받는다.)</u>의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 이런 조직의 힘은 전국의 모든 지역에 존재하지만, 강원도처럼 산세가 험하여 다른 마을과 교류가 힘든 '좁은 사회' 안에서는 조직의 힘이 특히 강하다. 다른 조직이나 자원이 접근하기 어려운 마을 안에서, 정부의 행정권력을 통해 자원을 확보한 조직은 '매마른 지역 안에서 가장 샘물이 풍부하게 흐르기 때문에' 독보적인 영향력을 행사할 수 있기 때문이다. 대통령 및 강원도지사 선거같은 도 단위 선거에서는 그나마 이 조직의 영향이 적지만, 작은 행정구역을 중심으로 진행되는 지역구국회의원, 강원도의회, 구·시·군의 장 선거에서는 조직의 힘이 강력하다. 
 
 1990년 이후 강원도 보수주류 정당의 강고한 벽을 제3세력 정당들이 조금이나마 뚫어낸 경우가 없지는 않다. 92년 총선에서는 이북 강원도 태생의 정주영이 창당한 제3지대 정당(통일국민당)이, 96년 총선에서는 1기 군사정권 인사로 구성되어 보수주류 정당보다도 더욱 보수적이었던 충청권 제3정당(자유민주연합)이 각각 9개, 7개의 지역구에서 30% 이상의 득표율을 올려서 각각 4석, 2석을 당선시켰다(전체 14개, 13개). 
 하지만 이 벽을 제대로 무너뜨린 것은 바로, 남북관계의 개선이었다. 민주당계 정당(새천년민주당)이 집권당이 된 후인 2000년 총선에서, 대북교류의 물꼬가 트이고 선거일 3일 전(4월 10일)에 남북 정상회담 6월 개최 예고가 발표되자, 민주당계 정당이 강원도의 9석 중 5석을 석권할 수 있었다. 이후 민주당계 정당의 강원도 성적은 남북관계의 진전 여부에 따라 극과 극을 달렸다. 개성공단과 금강산 관광이 일상화되었던 2008년에도 8석 중 4석(민주당계 무소속 2석 포함)을 차지했지만, 연평도 포격사건의 여파가 가시지 않았던 2012년 총선에는 9석을 모두 보수주류 정당이 차지한다. 가장 최근의 극단적인 예시는 남북 정상회담 직후에 열린 2018년 지방선거로, 민주당계 정당(더불어민주당)이 강원도에서 구·시·군의 장 11석과 도의원 35석(전체 18석, 46석)을 차지했다. 14년 지방선거에서 민주당계 정당의 성적은 1석, 6석에 불과했다. 
@@ -173,8 +173,8 @@
 
 ##### 강원 원주시 갑·을
 **강원도 최대 격전지**
-흔히들 춘천, 원주, 강릉을 강원도 3대 도시라고 이야기한다. 최근에는 그 중에서도 원주시가 차지하는 정치적 위상이 점점 커지고 있다. 수도권과 가깝고 강원원주<u>혁신도시(노무현 행정부가 시행한 사업. 전국 각 권역별로 2~3개씩 총 13곳을 선정해서, 서울 및 경기도에 위치한 공기업과 공공기관을 이전하고 그 임직원을 위한 주거상업공간을 마련하는 신도시 개발사업.)</u>가 들어선다는 이점 덕분에 경제와 산업이 지속적으로 발전하고 있기 때문이다. 강원도에서 인구도 제일 많고, 특히 젊은 인구와 타지 출신 인구가 꾸준히 증가하고 있다.
-이런 점 때문에 원주시는 강원도에서 보수주류 정당의 세가 가장 약한 곳이기도 하다. 2016년 총선에서 강원도 유일의 민주당계 정당 당선인이 원주시 을 지역구에서 나왔고(송기헌, 더불어민주당), 갑 지역구에서도 보수주류 정당(김기선, 새누리당)은 134표 차이로 간신히 승리한다. 비례대표 정당투표에서도, 원주시는 강원도에서 더불어민주당, 국민의당(제3지대 정당) 지지율이 가장 높게 나온 행정구역이자, 정의당(사민주의 정당)이 두 번째로 높게 나온 행정구역이다. 2010년 이후 강원도 유일의 민주당계 출신 3선 시장(원창묵, 2010~)을 배출하기도 했다.
+흔히들 춘천, 원주, 강릉을 강원도 3대 도시라고 이야기한다. 최근에는 그 중에서도 원주시가 차지하는 정치적 위상이 점점 커지고 있다. 수도권과 가깝고 강원원주<u>혁신도시(노무현 행정부가 시행한 사업. 전국 각 권역별로 2~~3개씩 총 13곳을 선정해서, 서울 및 경기도에 위치한 공기업과 공공기관을 이전하고 그 임직원을 위한 주거상업공간을 마련하는 신도시 개발사업.)</u>가 들어선다는 이점 덕분에 경제와 산업이 지속적으로 발전하고 있기 때문이다. 강원도에서 인구도 제일 많고, 특히 젊은 인구와 타지 출신 인구가 꾸준히 증가하고 있다.
+이런 점 때문에 원주시는 강원도에서 보수주류 정당의 세가 가장 약한 곳이기도 하다. 2016년 총선에서 강원도 유일의 민주당계 정당 당선인이 원주시 을 지역구에서 나왔고(송기헌, 더불어민주당), 갑 지역구에서도 보수주류 정당(김기선, 새누리당)은 134표 차이로 간신히 승리한다. 비례대표 정당투표에서도, 원주시는 강원도에서 더불어민주당, 국민의당(제3지대 정당) 지지율이 가장 높게 나온 행정구역이자, 정의당(사민주의 정당)이 두 번째로 높게 나온 행정구역이다. 2010년 이후 강원도 유일의 민주당계 출신 3선 시장(원창묵, 2010~~)을 배출하기도 했다.
 
 
 ##### 강원 강릉시
